# cutie-home

./: .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
debian/: control  cutie-home.cutie-ui-io.service  cutie-home.install
src/: launcher.cpp  launcher.h  main.cpp  notifications.cpp  notifications.h  settings.cpp  settings.h
src/qml/: AppSwitcher.qml  HomeScreen.qml  LaunchAppGrid.qml  NoRunningAppScreen.qml  NotificationScreen.qml  ScreenSwipe.qml  main.qml  qml.qrc
